# project

./: CMakeLists.txt
data/: loginData.txt
include/: cartManagement.h  displayCategories.h  displayWelcome.h  fileHandling.h  receiptGeneration.h  userLogin.h
src/: cartManagement.cpp  displayCategories.cpp  displayWelcome.cpp  fileHandling.cpp  main.cpp  userLogin.cpp
